# ssx-online

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  Makefile  README.md  package-lock.json  package.json  pyproject.toml  setup.txt  webpack.config.js
src/: index.html
src/js/: index.tsx
src/ssx_online/: fast.py  filewatcher.py
tests/: conftest.py  test_basics.py  test_settings.cfg
tests/ispyb-database/: Dockerfile  custom.sql
