[tool.poetry]
name = "ssx-online"
version = "0.1.0"
description = ""
authors = ["Nicholas Devenish <ndevenish@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
