[tool.poetry]
name = "ssx-online"
version = "0.1.0"
description = ""
authors = ["Nicholas Devenish <ndevenish@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
sse-starlette = "^1.1.6"
python-dateutil = "^2.8.2"
ispyb = "^6.12.1"
aiofiles = "^22.1.0"

[tool.poetry.dev-dependencies]
sqlalchemy-stubs = "^0.4"
pytest = "^7.1.3"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    '''ignore:relationship 'BLSession.BeamCalendar1':sqlalchemy.exc.SAWarning''',
]